--- a/index.html
+++ b/index.html
@@ -672,7 +672,8 @@
                 try {
                     const finalPrompt = getSystemPromptForMode(mode || activeMode, userMessage);
 
-                    const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${storedApiKey}`, {
+                    // Switched to 'gemini-pro' for maximum compatibility
+                    const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-pro:generateContent?key=${storedApiKey}`, {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json'
